@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkUnixKey.c,v 1.17 2010/01/02 11:07:56 dkf Exp $
+ * RCS: @(#) $Id: tkUnixKey.c,v 1.18 2011/01/06 05:58:16 stwo Exp $
  */
 
 #include "tkInt.h"
@@ -65,9 +65,9 @@ Tk_SetCaretPos(
 
 	spot.x = dispPtr->caret.x;
 	spot.y = dispPtr->caret.y + dispPtr->caret.height;
-	preedit_attr = XVaCreateNestedList(0, XNSpotLocation, &spot, NULL);
+	preedit_attr = XVaCreateNestedList(0, XNSpotLocation, &spot, (void *) NULL);
 	XSetICValues(winPtr->inputContext, XNPreeditAttributes, preedit_attr,
-		NULL);
+		(void *) NULL);
 	XFree(preedit_attr);
     }
 #endif
